--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <link rel="shortcut icon" href="/LOGO.png" type="image/x-icon">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="style.css">
 
 
 
