--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <body>
   <nav class="navbar navbar-expand-lg bg-info sticky-lg-top my-0 py-2">
     <div class="container-fluid" style="height:60px;">
-        <img src="/LOGO.png" alt="" width="80" class="rounded-circle ms-3" height="80">
+        <img src="LOGO.png" alt="" width="80" class="rounded-circle ms-3" height="80">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
