--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             <div class="container-md container-fluid my-5">
                 <div class="row">
                     <div class="col-lg-6  col-12 d-flex align-items-center py-3 justify-content-center" style="height: 75vh;">
-                        <img src="/project-3.jpg" alt="ia_png" class="img-lg-fluid h-md-100 h-75 img-thumbnail animate__fadeInUp animate__infinite photo  ">
+                        <img src="project-3.jpg" alt="ia_png" class="img-lg-fluid h-md-100 h-75 img-thumbnail animate__fadeInUp animate__infinite photo  ">
                     </div>
                     <div class="col-lg-6 col-12 mt-4">
                         <h1>We Make Your Business Smarter with Artificial Intelligence</h1>
