--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
-<link rel="shortcut icon" href="/LOGO.png" type="image/x-icon">
+<link rel="shortcut icon" href="LOGO.png" type="image/x-icon">
 <link rel="stylesheet" href="style.css">
 
 
@@ -539,7 +539,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       </section>
     </main>
   
-<!--footer -->
 <div class="container-fluid my-5 px-0  ">
   <!-- Footer -->
     <!-- Footer Start -->
@@ -610,6 +609,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   </div>
   <!-- Footer -->
 </div>
+
 
 
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
