--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
 <main>
     <section>
       <!-- contact us bouttons-->
-        <div class="container-md container-fluid d-flex align-items-center Artifcial_div">
+        <div     data-aos="fade-up"
+        data-aos-offset="80"
+        data-aos-delay="0"
+        data-aos-duration="3000"
+        data-aos-easing="ease-in-out"
+        data-aos-mirror="true"
+        data-aos-once="false"  class="container-md container-fluid d-flex align-items-center Artifcial_div ">
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center col-12 mt-4">
                     <div class="card animate__backInDown shadow-  pt-1 pb-2 px-2 pt-2 " style="background: transparent;">
@@ -212,8 +218,14 @@
         <section>
             <div class="container-md container-fluid my-5">
                 <div class="row">
-                    <div class="col-lg-6  col-12 d-flex align-items-center py-3 justify-content-center" style="height: 75vh;">
-                        <img src="project-3.jpg" alt="ia_png" class="img-lg-fluid h-md-100 h-75 img-thumbnail animate__fadeInUp animate__infinite photo  ">
+                    <div data-aos="fade-up"  data-aos-offset="200"
+                   
+                    data-aos-duration="2000"
+                    data-aos-easing="ease-in-out"
+                    data-aos-mirror="true"
+                    data-aos-once="false"
+                    data-aos-anchor-placement="top-center" class="col-lg-6  col-12 d-flex align-items-center py-3 justify-content-center" style="height: 75vh;">
+                        <img src="project-3.jpg" alt="ia_png" class="img-lg-fluid h-md-100 h-75   " width="50%" height="90%">
                     </div>
                     <div class="col-lg-6 col-12 mt-4">
                         <h1>We Make Your Business Smarter with Artificial Intelligence</h1>
@@ -239,9 +251,11 @@
           <div class="container mt-5 z-3">
               <div class="row gap-3">
                   <div class="col-12 col-md-6 col-lg ">
-                      <div class="card w-100  hvr-shutter-in-vertical " style="width: 18rem;">
+                      <div class="card w-100  hvr-shutter-in-vertical " style="width: 18rem;"data-aos="flip-left"
+                      data-aos-easing="ease-out-cubic"
+                      data-aos-duration="500">
                           <img src="Analysis.jpg" class="card-img-top img-fluid" alt="...">
-                          <div class="card-body">
+                          <div class="card-body py-1">
                               <h5 class="card-title">Analysis</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                               <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -249,9 +263,11 @@
                       </div>
                   </div>
                   <div class="col-12 col-md">
-                    <div class="card w-100  w hvr-shutter-in-vertical " style="width: 18rem;">
+                    <div class="card w-100  w hvr-shutter-in-vertical " style="width: 18rem;"data-aos="flip-left"
+                    data-aos-easing="ease-out-cubic"
+                    data-aos-duration="500">
                           <img src="robotic.webp" class="card-img-top img-fluid" alt="...">
-                          <div class="card-body">
+                          <div class="card-body py-1">
                               <h5 class="card-title">Robotic Automation</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                               <a href="#" class="btn btn-primary">Read More</a>
@@ -259,9 +275,11 @@
                       </div>
                   </div>
                   <div class="col-12 col-md-6 col-lg">
-                     <div class="card w-100  w hvr-shutter-in-vertical " style="width: 18rem;">
+                     <div class="card w-100  w hvr-shutter-in-vertical " style="width: 18rem;"data-aos="flip-left"
+                     data-aos-easing="ease-out-cubic"
+                     data-aos-duration="500">
                           <img src="EDUCATION.jpg" class="card-img-top img-fluid" alt="...">
-                          <div class="card-body">
+                          <div class="card-body py-1">
                               <h5 class="card-title">Education & Science</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                               <a href="#" class="btn btn-primary">Read More</a>
@@ -269,9 +287,11 @@
                       </div>
                   </div>
                   <div class="col-12 col-md-6 col-lg">
-                    <div class="card w-100   hvr-shutter-in-vertical " style="width: 18rem;">
+                    <div class="card w-100   hvr-shutter-in-vertical " style="width: 18rem;"data-aos="flip-left"
+                    data-aos-easing="ease-out-cubic"
+                    data-aos-duration="500">
                           <img src="machine_learning.jpg" class="card-img-top img-fluid" alt="...">
-                          <div class="card-body">
+                          <div class="card-body py-1">
                               <h5 class="card-title">Machine learning</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                               <a href="#" class="btn btn-primary">Read More</a>
@@ -528,6 +548,7 @@
       </section>
     </main>
   
+<!--footer -->
 <div class="container-fluid my-5 px-0  ">
   <!-- Footer -->
     <!-- Footer Start -->
@@ -600,9 +621,7 @@
 </div>
 
 
-
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
-
     <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
