--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="card-body  mx-md-4">
       
                       <div class="text-center">
-                        <img src="/LOGO.png"
+                        <img src="LOGO.png"
                           style="width: 185px;" class="rounded-5" alt="logo">
                         <h4 class="mt-1  pb-1">We are The Lotus Team</h4>
                       </div>
