--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
 <link rel="shortcut icon" href="/LOGO.png" type="image/x-icon">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 </head>
