--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!--navbar-->
   <nav class="navbar navbar-expand-lg bg-info sticky-lg-top my-0 py-2">
     <div class="container-fluid" style="height:60px;">
-        <img src="/LOGO.png" alt="" width="80" class="rounded-circle ms-3" height="80">
+        <img src="LOGO.png" alt="" width="80" class="rounded-circle ms-3" height="80">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -107,7 +107,7 @@
                     <div class="card-body  mx-md-4">
       
                       <div class="text-center">
-                        <img src="/LOGO.png"
+                        <img src="LOGO.png"
                           style="width: 185px;" class="rounded-5" alt="logo">
                         <h4 class="mt-1  pb-1">We are The Lotus Team</h4>
                       </div>
