--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
         </section>
           <!--les cards des metiers -->
         <section>
-          <div class="container mt-5 z-3 ">
+           <div class="container mt-5 z-3 ">
               <div class="row gap-3 ">
                 <div class="col-12 col-md">
                   <div class="card w-100  w hvr-shutter-in-vertical " style="width: 18rem;"data-aos="flip-left"
                   data-aos-easing="ease-out-cubic"
                   data-aos-duration="500">
-                        <img src="/Analysis.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="Analysis.jpg" class="card-img-top img-fluid" alt="...">
                         <div class="card-body py-1">
                             <h5 class="card-title">Robotic Automation</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -295,7 +295,7 @@
                     <div class="card w-100  w hvr-shutter-in-vertical " style="width: 18rem;"data-aos="flip-left"
                     data-aos-easing="ease-out-cubic"
                     data-aos-duration="500">
-                          <img src="/machine_learning.jpg" class="card-img-top img-fluid" alt="...">
+                          <img src="machine_learning.jpg" class="card-img-top img-fluid" alt="...">
                           <div class="card-body py-1">
                               <h5 class="card-title">Robotic Automation</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -304,7 +304,7 @@
                       </div>
                   </div>
               </div>
-          </div>
+           </div>
       </section>
       
        ­<!--  questions ici-->
@@ -635,7 +635,7 @@
       AOS.init();
     </script>
   
-  ></script>
+  </script>
  
 </body>
 
